cmake_minimum_required(VERSION "2.8")
project(leetcode)
set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -Wall -g -ggdb")
set(CMAKE_BUILD_TYPE "Debug")
include_directories(./common)
aux_source_directory(./common PUBLIC)
add_library(common SHARED ${PUBLIC})
aux_source_directory(. SRCS)
link_libraries(common)
foreach(SRC ${SRCS})
	string(REGEX REPLACE ".cc$" "" TAR ${SRC})
	string(REGEX REPLACE "./" "" TARGET ${TAR})
	add_executable(${TARGET} ${SRC}) 
	target_compile_features(${TARGET} PRIVATE cxx_range_for)
endforeach()
